Bug fixes on mobile

--- a/lab1/assets/style/style.css
+++ b/lab1/assets/style/style.css
@@ -172,13 +172,14 @@ section {
 .sec2-1, .sec2-2, .sec2-3, .sec2-4, .sec2-5, .sec2-6, .sec2-7, .sec2-8, .sec2-9, .sec2-10 {
   background-color: #8AE8DC ;
   font-size: 25px ;
+  width: 100% ;
 }
 
 aside {
   background-color: #02F537 ;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 800px) {
   .sec1-1, .sec1-2, .sec1-3, .sec1-4 {
     width: 50% ;
   }
@@ -189,7 +190,7 @@ aside {
 
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 900px) {
   .head1, .head2 {
     width: 50% ;
     padding-top: 20px ;
@@ -239,7 +240,7 @@ aside {
 
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
   .sec2-5, .sec2-6, .sec2-7, .sec2-8, .sec2-9, .sec2-10 {
     width: 16.66% ;
   }
@@ -248,7 +249,7 @@ aside {
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 1200px) {
   .sec2-1, .sec2-2, .sec2-3, .sec2-4, .sec2-5, .sec2-6, .sec2-7, .sec2-8, .sec2-9, .sec2-10 {
     width: 10% ;
   }
